--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,9 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: nerudista
+github_username:  nerudista
+linkedin_username: nerudista
 
 # Build settings
 
@@ -35,6 +36,18 @@ theme: jekyll-theme-clean-blog
 #theme: minima
 plugins:
   - jekyll-feed
+
+
+# Build settings for clean theme
+markdown:           kramdown
+paginate:           5
+paginate_path:      "/posts/page:num/"
+plugins:
+  #- jekyll-feed
+  - jekyll-paginate
+  - jekyll-sitemap ## Uncomment this line to silently generate a sitemaps.org compliant sitemap for your Jekyll site
+
+
 
 # Exclude from processing.
 # The following items will not be processed, by default.
