--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: nerudista
 github_username:  nerudista
-linkedin_username: nerudista
+linkedin_username: pabloqvazquez
 
 # Build settings
 
